--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <span class="text-primary">Andrade</span>
                 </h1>
                 <div class="subheading mb-5">
-                    AV.Mozart Pinheiro de Lucena,1450 · Vila Velha, Fortaleza CE · (85) 991845207 · Brasileiro · 20 anos
+                    AV.Mozart Pinheiro de Lucena,1450 · Vila Velha, Fortaleza CE · Telefone (85) 991845207 · Whatsapp (85) 992591984· Brasileiro · 20 anos
                     <a href="mailto:gabriel.srmorais8@gmail.com">gabriel.srmorais8@gmail.com</a>
                 </div>
                 <p class="lead mb-5">Gostaria de fazer parte da equipe de funcionários da empresa, tendo o objetivo de
