--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <span class="text-primary">Andrade</span>
                 </h1>
                 <div class="subheading mb-5">
-                    AV.Mozart Pinheiro de Lucena,1450 · Vila Velha, Fortaleza CE · Telefone (85) 991845207 · Whatsapp (85) 992591984· Brasileiro · 20 anos
+                    AV.Mozart Pinheiro de Lucena,1450 · Vila Velha, Fortaleza CE · Telefone (85) 991845207 · Whatsapp (85) 991845207· Brasileiro · 21 anos
                     <a href="mailto:gabriel.srmorais8@gmail.com">gabriel.srmorais8@gmail.com</a>
                 </div>
                 <p class="lead mb-5">Gostaria de fazer parte da equipe de funcionários da empresa, tendo o objetivo de
@@ -71,8 +71,8 @@
                 <h2 class="mb-5">Experiência</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">FUNCAP-Estágiario</h3>  <div class="flex-shrink-0"><span class="text-primary">Início: Setembro 2021 há janeiro de 2022 </span></div>
-                        <p>Trabalhei como estágiario por ter sido algo obrigatório, por ter feito ensino médio em REDES, em uma escola profissionalizante.Lá nesta empresa, aprendi muitas coisas para investir em mim mesmo como profissional e como pessoa.</p>
+                        <h3 class="mb-0">FUNCAP-Bolsista</h3>  <div class="flex-shrink-0"><span class="text-primary">Início: Janeiro 2024</span></div>
+                        <p>Nesta empresa, aprendi muitas coisas para investir em mim mesmo como profissional e como pessoa.</p>
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -114,7 +114,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">UNIFAMETRO</h3>
                         <div class="subheading mb-3">Cursando: ADS(Análise de Desenvolvimento de Sistemas)</div>
-                        <p>2° Semestre</p>
+                        <p>3° Semestre</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Fervereiro 2023</span></div>
                 </div>
@@ -150,6 +150,10 @@
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         C++
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Inglês
                     </li>
                 </ul>
             </div>
